--- a/front/package.json
+++ b/front/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "app",
+  "name": "CPX",
   "version": "1.0.0",
-  "description": "My bee&#39;s knees Nuxt.js project",
+  "description": "ロキソニンとカフェインからこれらの記事は錬成されています",
   "author": "",
   "private": true,
   "scripts": {
